@@ -1,4 +1,5 @@
 0.3.1 - currently working on
+- [#953] Change: Define LF as chr(10) and use that instead of chr(10)
 - [#935] Change: Add @author, @package and @subpackage tags to all PHP classes
 
 0.3.0 - released 2007-06-01
